--- a/overlay/packages/apps/Settings/res/values/config.xml
+++ b/overlay/packages/apps/Settings/res/values/config.xml
@@ -31,6 +31,9 @@
     -->
     <integer name="config_vibration_supported_intensity_levels">3</integer>
     
+    <!-- Show battery cycle count -->
+    <bool name="config_show_battery_cycle_count" translatable="false">true</bool>
+    
     <!-- Whether to show volume steps settings -->
     <bool name="config_supports_volume_steps" translatable="false">true</bool>
 
